feat: delete images
